added audio and open spotify on start

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="controls">
-                <button id="start" onclick="start(), document.getElementById('audioStart').play()"><i class="fa-solid fa-play"></i></button>
+                <button id="start" onclick="start(), document.getElementById('audioStart').play(), window.open('https://open.spotify.com/')"><i class="fa-solid fa-play"></i></button>
 
                 <a id='reset' href="/"><i class="fa-solid fa-arrow-rotate-left"></i></a>
             </div>
